fix: button on error page is not well aligned on desktop

--- a/front/src/components/atoms/Button/styles.scss
+++ b/front/src/components/atoms/Button/styles.scss
@@ -1,14 +1,17 @@
 .button {
   width: 100%;
   height: 48px;
-  padding: 16px 8px;
+  padding: 8px;
   border-radius: 4px;
   color: #fff;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
-  line-height: 16px;
   border: none;
+  max-width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .button:disabled {
