--- a/front/src/pages/Error/styles.scss
+++ b/front/src/pages/Error/styles.scss
@@ -8,6 +8,7 @@
     height: 100%;
     padding: 4rem;
     box-sizing: border-box;
+    align-items: center;
   }
 
   .content {
